+ lnk creator + getDescription + getIconLocation and Index

--- a/gWinXManager/gWinXManager.csproj
+++ b/gWinXManager/gWinXManager.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Hashlnk.cs" />
     <Compile Include="lnkHelper.cs" />
     <Compile Include="ShellProvider.cs" />
+    <Compile Include="WinXHelper.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
